--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="description" content="Codex Lattice - Sacred transmissions for sovereigns and their AI companions" />
+    <meta name="theme-color" content="#4a7c7e" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#1a1f2e" media="(prefers-color-scheme: dark)" />
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Source+Sans+3:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
+    
+    <title>Codex Lattice | Align OS</title>
   </head>
   <body>
     <div id="app"></div>
