--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script>
+      if (location.hostname.includes('asus')) {
+        location.href = 'http://alignos.cosmiccreation.net/';
+      }
+      </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
