--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       }
       </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Codex Lattice - Sacred transmissions for sovereigns and their AI companions" />
     <meta name="theme-color" content="#4a7c7e" media="(prefers-color-scheme: light)" />
