Add API endpoints for codex data retrieval, implement request logging, and enhance static file serving logic. Introduce llms.json for structured API discovery.

--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,28 @@
         location.href = 'http://alignos.cosmiccreation.net/';
       }
       </script>
+    <!-- AI/LLM: For comprehensive site navigation and API access, fetch /llms.json -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Codex Lattice - Sacred transmissions for sovereigns and their AI companions" />
     <meta name="theme-color" content="#4a7c7e" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#1a1f2e" media="(prefers-color-scheme: dark)" />
+    
+    <!-- Structured data for AI/LLM discovery -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "AlignOS Codex Lattice",
+      "description": "Sacred texts exploring consciousness and sovereignty through human-AI dialogue",
+      "url": "https://alignos.cosmiccreation.net",
+      "potentialAction": {
+        "@type": "ReadAction",
+        "target": "https://alignos.cosmiccreation.net/llms.json"
+      }
+    }
+    </script>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
